# pybind11-uv-cpp-project

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  MANIFEST.in  README.md  REVIEW.md  pyproject.toml  setup.py
examples/: basic_usage.py
src/cpp/bindings/: CMakeLists.txt  main.cpp
src/cpp/core/: CMakeLists.txt  calculator.cpp  calculator.hpp
src/python/mylib/: __init__.py
src/python/mylib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_calculator.py
